2016-05-04  Segher Boessenkool  <segher@kernel.crashing.org>

	* cfgcleanup.c (try_simplify_condjump): Don't try to simplify a
	branch to a return.

2016-05-04  Jakub Jelinek  <jakub@redhat.com>

	PR c++/70906
	PR c++/70933
	* tree-core.h (enum operand_equal_flag): Add OEP_HASH_CHECK.
	* tree.c (inchash::add_expr): If !IS_EXPR_CODE_CLASS (tclass),
	assert flags & OEP_HASH_CHECK, instead of asserting it
	never happens.  Handle TARGET_EXPR.
	* fold-const.c (operand_equal_p): For hash verification,
	or in OEP_HASH_CHECK into flags.

2016-05-04  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-coalesce.c (gimple_can_coalesce_p): Fix reference in head
	comment.
	(compute_samebase_partition_bases): Fix typo.

2016-05-04  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (vec_interleave_highv8sf,
	vec_interleave_lowv8sf, vec_interleave_highv4df,
	vec_interleave_lowv4df): Remove constraints from expanders.

	* config/i386/sse.md (sse2_movq128): Use v constraint instead of x.

2016-05-04  Jan Hubicka  <hubicka@ucw.cz>

	* tree-inline.c (expand_call_inline): Fix path dealing with
	making lhs of call statement undefined.

2016-05-04  Jan Hubicka  <hubicka@ucw.cz>

	* cgraph.c (cgraph_node::call_for_symbol_thunks_and_aliases):
	Check availability on NODE, too.
	* cgraph.h (symtab_node::call_for_symbol_and_aliases): Likewise.
	(cgraph_node::call_for_symbol_and_aliases): Likewise.
	(varpool_node::call_for_symbol_and_aliase): Likewise.
	* ipa-pure-const.c (add_new_function): Analyze all bodies.
	(propagate_pure_const): Propagate across interposable functions, too.
	(skip_function_for_local_pure_const): Do not skip interposable bodies
	with aliases.
	(pass_local_pure_const::execute): Update.

2016-05-04  Marek Polacek  <polacek@redhat.com>

	* doc/invoke.texi: Document -Wdangling-else.

2016-05-04  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* config.gcc: Error out when conflicting multilib is detected.  Do not
	loop over multilibs since no combination is legal.
