@@ -1,5 +1,11 @@
 2016-05-04  Segher Boessenkool  <segher@kernel.crashing.org>
 
+	* cfgcleanup.c (bb_is_just_return): New function.
+	(try_optimize_cfg): Simplify jumps to return, branches to return,
+	and branches around return.
+
+2016-05-04  Segher Boessenkool  <segher@kernel.crashing.org>
+
 	* cfgcleanup.c (try_simplify_condjump): Don't try to simplify a
 	branch to a return.
 
